src/component/multi_progress/tests/snapshots/envision__component__multi_progress__tests__workflow__view_disabled_state.snap
---
source: src/component/multi_progress/tests/workflow.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│● Item 1  50% ████████████████████░░░░░░░░░░░░░░░░░░░░    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
