src/component/multi_progress/tests/snapshots/envision__component__multi_progress__tests__workflow__view_multiple_items_mixed_states.snap
---
source: src/component/multi_progress/tests/workflow.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│● Download  75% ████████████████████████████░░░░░░░░░░    │
│✓ Upload 100% ████████████████████████████████████████    │
│✗ Process  Error: Timeout                                 │
│○ Verify   0% ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
