src/component/multi_progress/tests/snapshots/envision__component__multi_progress__tests__workflow__view_single_item_full_progress.snap
---
source: src/component/multi_progress/tests/workflow.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│● Complete 100% ██████████████████████████████████████    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
